fix: adjust font size in announcement section for better readability

--- a/style/fundraising_initiative.css
+++ b/style/fundraising_initiative.css
@@ -844,7 +844,7 @@ div.announce_section {
     margin: 4px 0px auto;
     width: 90%;
     text-align: center;
-    font-size: 1.6em;
+    font-size: 1em;
     font-weight: bold;
     font-weight: bold;
     color: var(--mac_white);
